# xanadu

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench_ecs.rs
benchmark/: Cargo.toml
benchmark-lib/: Cargo.toml
benchmark-lib/benches/: bench.rs
benchmark-lib/src/: bevy_ecs_bench.rs  game_objects_hash_bench.rs  game_objects_vec_bench.rs  lib.rs  specs_bench.rs  xanadu_bench.rs  xanadu_exclusive_bench.rs
benchmark/benches/: bench.rs
benchmark/src/: game_objects_hash_bench.rs  game_objects_vec_bench.rs  lib.rs  pair.rs  single.rs  specs_bench.rs  xanadu_refcell_bench.rs
benchmark/src/pair/: bevy_ecs_bench.rs  game_objects_hash_bench.rs  game_objects_vec_bench.rs  specs_bench.rs  xanadu_bench.rs
benchmark/src/single/: bevy_ecs_bench.rs  game_objects_hash_bench.rs  game_objects_vec_bench.rs  specs_bench.rs  xanadu_exclusive_bench.rs  xanadu_refcell_bench.rs
doc/: benchmark.md
src/: collections.rs  ecs.rs  generational_vec.rs  lib.rs  storage.rs
src/collections/: any_component_array.rs  generational_vec.rs  sparse_vec.rs  type_erased_array.rs  type_erased_sparse_vec.rs  typed_array.rs  typed_component_array.rs
src/ecs/: any_component_array.rs  component.rs  dyn_pool.rs  iter.rs  query.rs  system.rs  typed_component_array.rs  untyped_component_array.rs  world.rs
src/ecs/dyn_pool/: any_component_array.rs  query.rs  system.rs  typed_component_array.rs  world.rs
src/ecs/unsafe_pool/: untyped_component_array.rs
