[package]
name = "xanadu"
version = "0.0.0"
license = "MPL-2.0"
authors  = ["yuma140902 <yuma140902@gmail.com>"]
description = "A toy ECS library"
repository = "https://github.com/yuma140902/xanadu"
categories = ["game-development"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
