[package]
name = "xanadu"
version = "0.0.1"
license = "MPL-2.0"
authors  = ["yuma140902 <yuma140902@gmail.com>"]
description = "A toy ECS library"
readme = "README.md"
repository = "https://github.com/yuma140902/xanadu"
categories = ["game-development"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = [ "derive" ] }
thiserror = "1.0.59"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.42"

[features]
test_in_browser = []
