[package]
name = "benchmark"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs = "0.14.2"
specs = "0.20.0"
xanadu = { path = "../" }

[features]
test_in_browser = []

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.42"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

